<resources>
    <string name="app_name">Measurements</string>
    <string name="login_text">Логин</string>
    <string name="password_text">Пароль</string>
    <string name="empty_list">Список пуст</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="date">Дата</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="server_address">http://188.225.46.31/api/</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="my_settings">mySettings</string>
    <string name="token">token</string>
    <string name="title_activity_one_measurement">OneMeasurementActivity</string>
    <string name="user_info">userInfo</string>
    <string name="load">Идет загрузка..</string>
    <string name="title_activity_measurement">MeasurementActivity</string>
    <string name="complete">Завершить</string>
    <string name="shift">Перенести</string>
    <string name="reject">Отклонить</string>
    <string name="problem">Проблема</string>
    <string name="transfer_measurement">Перенос замера</string>
    <string name="cause">Причина:</string>
    <string name="client">Клиент</string>
    <string name="gauger">Замерщик</string>
    <string name="comment">Комментарий:</string>
    <string name="date_transfer">Дата переноса:</string>
    <string name="cancel">Отмена</string>
    <string name="another_company">Выбрали другую компанию</string>
    <string name="wrong_gauger">Ошибка замерищика</string>
    <string name="wrong_manager">Ошибка менеджера</string>
    <string name="search">Поиск</string>
    <string name="reject_measurement">Отказ от замера</string>
    <string name="reject_deal">Отказ</string>
    <string name="complete_measurement">Завершение замера</string>
    <string name="offer_concluded">Договор заключен</string>
    <string name="sum">Сумма</string>
    <string name="new_problem">Новая проблема</string>
    <string name="id">id</string>
    <string name="okay">OK</string>
    <string name="deal">deal</string>
    <string name="enter_sum_comment">Введите сумму и комментарий</string>
    <string name="enter_sum">Введите сумму</string>
    <string name="enter_comment">Введите комментарий</string>
    <string name="empty"></string>
    <string name="measurement_closed">Замер завершен</string>
    <string name="measurement_added">Замер добавлен</string>
    <string name="mount_added">Монтаж добавлен</string>
    <string name="successful_reject">Успешное завершение</string>
    <string name="added_client">Добавлен клиент</string>
    <string name="change_manager">Изменение менеджера</string>
    <string name="add_discussion">Добавление обсуждения</string>
    <string name="add_discount">Добавить</string>
    <string name="close_measurement_error">При завершении произошла ошибка</string>
    <string name="emty_login_or_password">Пустое поле Логин или Пароль</string>
    <string name="wrong_login_password">Неправильный логин или пароль</string>
    <string name="something_wrong">Что-то пошло не так =(</string>
    <string name="exit_app">Выход из приложения</string>
    <string name="realy_exit_app">Вы действительно хотите выйти из приложения?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="check">check</string>
    <string name="exit_account">Выход из аккаунта</string>
    <string name="realy_exit_account">Вы действительно хотите выйти из аккаунта?</string>
    <string name="not_distributed">Не распределено</string>
    <string name="measurement_not_closed">Замер не завершен</string>
    <string name="measurement_reject">Замер отклонен</string>
    <string name="update_error">При обновлении данных произошла ошибка</string>
    <string name="error_measurement_reject">При отклонении замера произошла ошибка</string>
    <string name="select_date_cause">Выберите дату и причину</string>
    <string name="select_date">Выберите дату</string>
    <string name="select_cause">Выберите причину</string>
    <string name="transfer_error">При переносе произошла ошибка</string>
    <string name="no_save_data">Нет сохраненных данных на заданную дату, проверьте подключение к интернету</string>
    <string name="nothing_show">По данному запросу ничего не найдено</string>
    <string name="no_internet">Нет доступа к интернету! Данные загружены из локального хранилища</string>
    <string name="problem_added">Проблема добавлена</string>
    <string name="error">Произошла ошибка</string>
    <string name="enter_header_description">Введите заголовок и описание проблемы</string>
    <string name="enter_string">Введите заголовок</string>
    <string name="enter_description">Введите описание</string>
    <string name="problems">Проблемы</string>
    <string name="address_not_set">Адрес не задан</string>
    <string-array name="months">
        <item>января</item>
        <item>февраля</item>
        <item>марта</item>
        <item>апреля</item>
        <item>мая</item>
        <item>июня</item>
        <item>июля</item>
        <item>августа</item>
        <item>сентября</item>
        <item>октября</item>
        <item>ноября</item>
        <item>декабря</item>
    </string-array>
    <string name="title_activity_one_problem">OneProblemActivity</string>
    <string name="goto_deal">Перейти к сделке</string>
    <string name="photo_added">Фотография добавлена</string>
    <string name="error_add_photo">При загрузке произошла ошибка</string>
    <string name="expect_answer">Ожидает ответа</string>
    <string name="thereis_answer">Ответ есть</string>
    <string name="comment_added">Комментарий добавлен</string>
    <string name="error_add_comment">При добавлении комментария произошла ошибка</string>
    <string name="add_comment">Добавить комментарий</string>
    <string name="become_response">Стать ответственным?</string>
    <string name="textview">TextView</string>
    <string name="non_cash">Безналичная оплата</string>
    <string name="prepayment">Предоплата</string>
    <string name="date_mount">Дата монтажа:</string>
    <string name="ok">ОК</string>
    <string name="measurements">Замеры</string>
    <string name="current">Текущие</string>
    <string name="rejected">Отклоненные</string>
    <string name="closed">Закрытые</string>
    <string name="my_objects">Мои объекты</string>
    <string name="exit_from_account">Выйти из аккаунта</string>
    <string name="header">Заголовок</string>
    <string name="description">Описание</string>
    <string name="photo">Фото</string>
    <string name="name_first_last">Имя Фамилия</string>
    <string name="all">Все</string>
    <string name="enter_comment_sym">Введите комментарий:</string>
    <string name="update_data">Обновление данных</string>
    <string name="itis_error">Произошла ошибка</string>
    <string name="without_internet">Нет подключения к интернету</string>
    <string name="measurement">Замер</string>
    <string name="recalculation">Перерасчет</string>
    <string name="mount">Монтаж</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="main">Главная</string>
    <string name="commentSimple">Комментарий</string>
    <string name="sum_after_discount">Сумма после перерасчета:</string>
</resources>