<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ru.nextf.measurements.activity.CompleteActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarAst"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/complete_measurement"
        app:titleTextColor="@color/white" />

    <TextView
        android:id="@+id/textViewDeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:text="@string/textview"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarAst"
        android:layout_marginLeft="8dp" />

    <CheckBox
        android:id="@+id/checkBoxOffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/offer_concluded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDeal"
        android:layout_marginLeft="8dp" />

    <CheckBox
        android:id="@+id/checkBoxCash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/non_cash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxOffer"
        android:layout_marginLeft="8dp" />

    <EditText
        android:id="@+id/editTextSum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/sum"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxCash" />

    <EditText
        android:id="@+id/editTextComment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/enter_comment"
        android:maxLines="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrepayment" />

    <EditText
        android:id="@+id/editTextPrepayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/prepayment"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSum" />

    <TextView
        android:id="@+id/textViewDateInstallation"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:text="@string/date_mount"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextComment"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:textColor="@color/black"
        android:visibility="gone"
        android:layout_marginStart="8dp"
        android:text="@string/select_date"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/dateButton"
        app:layout_constraintStart_toEndOf="@+id/dateButton"
        app:layout_constraintTop_toTopOf="@+id/dateButton"
        android:layout_marginLeft="8dp" />

    <ImageButton
        android:id="@+id/dateButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/blue_calendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDateInstallation"
        android:layout_marginLeft="16dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/close_circle"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/textViewDate"
        app:layout_constraintStart_toEndOf="@+id/textViewDate"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonCancel"
            style="@style/MyButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/buttonOk"
            style="@style/MyButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/ok" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
